classic-with-waves/app-server-authorization-policy.yml
# **NOTE**: this file is generated by `dhall-render`.
# You should NOT edit it manually, your changes will be lost.

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    product: support
    project: classic
    role: app-server
    role_group: app-server
    team: support
  name: classic-app-server-authorizationpolicy
  namespace: classic
spec:
  action: DENY
  rules:
  - from:
    - source:
        notNamespaces:
        - platform-data-graph-gateway
    to:
    - operation:
        paths:
        - "/api/internal/graphql"
  selector:
    matchLabels:
      project: classic
      role: app-server
